# english-news-reader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  OPERATIONS.md  PHASE3_ADDENDUM.md  README.md  REQUIREMENTS_v2.md  SPEC.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: daily.yml  weekly_series.yml
cloudflare-worker/: README.md  cron-trigger.js
data/published/2026-05-05/articles/: ai-regulation-and-corporate-responsibility-may-2026.json  (+17 more)
data/stories/: ai-data-centers-energy-series.json  deepfake-misinformation-series.json  food-insecurity-climate-resilience.json  global-aging-labor-crisis.json  global-ebola-response.json  global-plastic-waste-series.json  global-renewable-transition.json  global-water-scarcity-series.json  space-debris-management.json
docs/: SERIES.md
scripts/: ai_config.yaml  ai_pipeline.py  fetch_news.py  generate_series.py  generate_series_article.py  llm_client.py  prompts.py  sources.yaml  weekly_series_pipeline.py
src/components/: ArticleCard.astro  BilingualReader.tsx  Header.astro  Quiz.tsx  SettingsPanel.tsx
src/components/admin/: SettingsForm.tsx
src/layouts/: BaseLayout.astro
src/lib/: aiSettings.ts  articles.ts  preferences.ts  stories.ts
src/pages/: about.astro  archive.astro  index.astro  search.astro  settings.astro
src/pages/admin/: settings.astro
src/pages/api/: env-status.ts  ollama-models.ts  settings.ts
src/pages/articles/: [slug].astro
src/pages/category/: [category].astro
src/pages/stories/: [id].astro  index.astro
src/styles/: global.css
(+746 files in other folders)
