[project]
name = "english-news-reader"
version = "0.1.0"
description = "Backend scripts for the English news reading practice site (news fetching + AI pipeline)."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.99.0",
    "feedparser>=6.0.12",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "trafilatura>=2.0.0",
]
